--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Fix copy/paste issues
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Better prefix
 set -g prefix C-s
