--- a/tmux.conf
+++ b/tmux.conf
@@ -12,10 +12,20 @@ bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
 # Vim pane navigation
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
+
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # Resize in smaller increments
 bind -r M-h resize-pane -L 2
@@ -35,6 +45,9 @@ bind-key c new-window -c "#{pane_current_path}"             # Create current pat
 bind-key r resize-pane -x 80    # Resize pane to 80 chars
 bind-key k clear-history        # Clear Screen
 
+# Toggle status bar
+bind-key a set-option status
+
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
 
@@ -46,13 +59,13 @@ set -g renumber-windows on                  # Automatically renumber windows
 set -g set-titles on                        # Report terminal title
 set -g set-titles-string "#S - #W"          # Terminal title format
 set -g status-interval 1                    # Update often for status
-set -g window-status-format "  #I:#W  "         # Window format
-set -g window-status-current-format "  #I:#W  " # Current window format
+set -g window-status-format "  #W  "         # Window format
+set -g window-status-current-format " [#W] " # Current window format
 
 # Status bar
 set -g status-left ''                                # Disable left status
 set -g status-right ''                               # Disable right status
-set -g status-position top                           # Show on bottom
+set -g status-position bottom                        # Show on bottom
 set -g status-justify centre                         # Center align window list
 
 set -g message-bg colour0                           # Always default bg
@@ -62,15 +75,16 @@ set -g pane-border-fg colour3                       # Yellow borders
 set -g pane-active-border-fg colour3                # Yellow borders
 
 # d5c4a1 for light mode
-# 1d2021 for dark mode
-set -g status-bg "#d5c4a1"                          # Default bg
+# #1d2021 for dark
+# set -g status-bg "#d5c4a1" # Default bg
+set -g status-bg colour0                            # Gray unselected windows
 set -g status-fg colour8                            # Gray unselected windows
-set -g window-status-bg "#d5c4a1" # Purple selected windows
-set -g window-status-current-fg colour5             # Purple selected windows
-set -g window-status-current-bg colour0             # Purple selected windows
+set -g window-status-bg colour0                     # Regular background
+set -g window-status-current-fg colour4             # Purple selected windows
+set -g window-status-current-bg colour0             # Regular background
 set -g window-status-bell-style fg=colour1          # Red on bell
 
-set -g window-status-separator ""
+set -g window-status-separator ""                 # Separate by double space
 
 # Settings for true color
 set -ga terminal-overrides ",xterm-256color:Tc"
