--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- weechat.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [debug]
 
@@ -27,7 +34,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = "${color:8}%l:%M${color:8}%p"
+buffer_time_format = ""
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -72,7 +79,7 @@ item_away_message = on
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
-item_time_format = "%H:%M"
+item_time_format = "x"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
@@ -112,6 +119,7 @@ read_marker = line
 read_marker_always_show = off
 read_marker_string = "-"
 save_config_on_exit = on
+save_config_with_fsync = off
 save_layout_on_exit = none
 scroll_amount = 3
 scroll_bottom_after_switch = off
@@ -210,6 +218,7 @@ partial_completion_command = off
 partial_completion_command_arg = off
 partial_completion_count = on
 partial_completion_other = off
+partial_completion_templates = "config_options"
 
 [history]
 display_default = 5
@@ -256,12 +265,26 @@ buflist.filling_left_right = vertical
 buflist.filling_top_bottom = columns_vertical
 buflist.hidden = off
 buflist.items = "buflist"
-buflist.position = left
+buflist.position = top
 buflist.priority = 0
 buflist.separator = on
 buflist.size = 0
 buflist.size_max = 0
 buflist.type = root
+fset.color_bg = default
+fset.color_delim = cyan
+fset.color_fg = default
+fset.conditions = "${buffer.full_name} == fset.fset"
+fset.filling_left_right = vertical
+fset.filling_top_bottom = horizontal
+fset.hidden = off
+fset.items = "fset"
+fset.position = top
+fset.priority = 0
+fset.separator = on
+fset.size = 3
+fset.size_max = 3
+fset.type = window
 input.color_bg = default
 input.color_delim = cyan
 input.color_fg = default
@@ -296,7 +319,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -371,6 +394,8 @@ ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
 meta-meta-OP = "/bar scroll buflist * b"
 meta-meta-OQ = "/bar scroll buflist * e"
+meta-meta2-11~ = "/bar scroll buflist * b"
+meta-meta2-12~ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -409,6 +434,10 @@ meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
 meta-Od = "/input move_previous_word"
+meta2-11^ = "/bar scroll buflist * -100%"
+meta2-11~ = "/bar scroll buflist * -100%"
+meta2-12^ = "/bar scroll buflist * +100%"
+meta2-12~ = "/bar scroll buflist * +100%"
 meta2-15~ = "/buffer -1"
 meta2-17~ = "/buffer +1"
 meta2-18~ = "/window -1"
@@ -419,10 +448,14 @@ meta2-1;3C = "/buffer +1"
 meta2-1;3D = "/buffer -1"
 meta2-1;3F = "/window scroll_bottom"
 meta2-1;3H = "/window scroll_top"
+meta2-1;3P = "/bar scroll buflist * b"
+meta2-1;3Q = "/bar scroll buflist * e"
 meta2-1;5A = "/input history_global_previous"
 meta2-1;5B = "/input history_global_next"
 meta2-1;5C = "/input move_next_word"
 meta2-1;5D = "/input move_previous_word"
+meta2-1;5P = "/bar scroll buflist * -100%"
+meta2-1;5Q = "/bar scroll buflist * +100%"
 meta2-1~ = "/input move_beginning_of_line"
 meta2-200~ = "/input paste_start"
 meta2-201~ = "/input paste_stop"
@@ -622,6 +655,10 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(fset.fset):button1 = "/window ${_window_number};/fset -go ${_chat_line_y}"
+@chat(fset.fset):button2* = "hsignal:fset_mouse"
+@chat(fset.fset):wheeldown = "/fset -down 5"
+@chat(fset.fset):wheelup = "/fset -up 5"
 @chat(perl.[*):button1 = "hsignal:coords"
 @chat(perl.iset):button1 = "hsignal:iset_mouse"
 @chat(perl.iset):button2* = "hsignal:iset_mouse"
@@ -640,6 +677,10 @@ meta2-D = "/cursor move left"
 @item(buffers):button2* = "hsignal:buffers_mouse"
 @item(buflist):button1* = "hsignal:buflist_mouse"
 @item(buflist):button2* = "hsignal:buflist_mouse"
+@item(buflist2):button1* = "hsignal:buflist_mouse"
+@item(buflist2):button2* = "hsignal:buflist_mouse"
+@item(buflist3):button1* = "hsignal:buflist_mouse"
+@item(buflist3):button2* = "hsignal:buflist_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
