--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -35,6 +35,7 @@ buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
 buffer_time_format = ""
+buffer_time_same = ""
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -266,11 +267,11 @@ buflist.filling_left_right = vertical
 buflist.filling_top_bottom = columns_vertical
 buflist.hidden = off
 buflist.items = "buflist"
-buflist.position = top
+buflist.position = left
 buflist.priority = 0
 buflist.separator = on
 buflist.size = 0
-buflist.size_max = 0
+buflist.size_max = 30
 buflist.type = root
 fset.color_bg = default
 fset.color_delim = cyan
@@ -320,7 +321,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
