--- a/tmux.conf
+++ b/tmux.conf
@@ -17,11 +17,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind C-h select-pane -L
-bind C-j select-pane -D
-bind C-k select-pane -U
-bind C-l select-pane -R
-
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
@@ -52,22 +47,23 @@ bind-key a set-option status
 # set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
 
-set -g base-index 1                         # 1 indexed, for keyboards
-set -sg escape-time 0                       # No escape time
-set -g history-limit 10000                  # More sane history limit
-set -g mouse on                             # Enable mouse
-set -g renumber-windows on                  # Automatically renumber windows
-set -g set-titles on                        # Report terminal title
-set -g set-titles-string "#S - #W"          # Terminal title format
-set -g status-interval 1                    # Update often for status
-set -g window-status-format "  #W  "         # Window format
-set -g window-status-current-format " [#W] " # Current window format
+set -g base-index 1                           # 1 indexed, for keyboards
+set -sg escape-time 0                         # No escape time
+set -g history-limit 10000                    # More sane history limit
+set -g mouse on                               # Enable mouse
+set -g renumber-windows on                    # Automatically renumber windows
+set -g set-titles on                          # Report terminal title
+set -g set-titles-string "#S - #W"            # Terminal title format
+set -g status-interval 5                      # Update often for status
+set -g window-status-format "#I #W  "         # Window format
+set -g window-status-current-format "#I #W  " # Current window format
 
 # Status bar
 set -g status-left ''
 set -g status-right ''
+set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
 set -g status-position bottom
-set -g status-justify centre
+set -g status-justify left
 set -g message-style bg=colour0
 set -g message-style fg=colour1
 
